--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "realtime application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +25,14 @@
   },
   "homepage": "https://github.com/jody29/real-time-web-2122#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "date-format": "^4.0.9",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "express": "^4.18.0",
     "socket.io": "^4.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
