--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   "homepage": "https://github.com/jody29/real-time-web-2122#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "date-format": "^4.0.9",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "node-fetch": "^2.6.0",
     "socket.io": "^4.5.0"
   },
   "devDependencies": {
